@@ -57,13 +57,13 @@
         </locale>
       </schema>
       <schema>
-        <key>/schemas/apps/onboard/use_trayicon</key>
-        <applyto>/apps/onboard/use_trayicon</applyto>
+        <key>/schemas/apps/onboard/use_status_icon</key>
+        <applyto>/apps/onboard/use_status_icon</applyto>
         <owner>onboard</owner>
         <type>bool</type>
         <default>false</default>
         <locale name="C">
-          <short>Use trayicon instead of the classic minimize.</short>
+          <short>Use status icon instead of the classic minimize.</short>
           <long>Display an icon in the notification area to hide and show onboard.</long>
         </locale>
       </schema>
